从TCS改回symbolic输出