@@ -1,23 +1,19 @@
 package cn.ac.ios;
 
-import cn.ac.ios.Bean.Pair;
 import cn.ac.ios.Bean.ReDoSBean;
 import cn.ac.ios.Utils.multithread.ITask;
 import cn.ac.ios.Utils.multithread.MultiBaseBean;
 import cn.ac.ios.Utils.multithread.MultiThreadUtils;
-import com.github.hycos.regex2smtlib.Translator;
-import com.github.hycos.regex2smtlib.translator.exception.FormatNotAvailableException;
-import com.github.hycos.regex2smtlib.translator.exception.TranslationException;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.*;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import static cn.ac.ios.Utils.Utils.readFile;
+import java.nio.file.Paths;
+import java.nio.file.LinkOption;
 
 /**
  * 主程序入口
@@ -47,71 +43,41 @@ public class Main {
      * @param args
      */
     public static void main(String[] args) {
-       try {
-           String regexsmt = Translator.INSTANCE.translate("cvc4", "\\n");
-           System.out.println(regexsmt);
-       } catch (FormatNotAvailableException | TranslationException e) {
-           throw new RuntimeException(e);
-       }
+        Logger.getGlobal().setLevel(Level.OFF);
+        commandLineSettings = new HashMap<>();
+        for (String arg : args) {
+            if (arg.contains(HELP_FLAG)) {
+                printUsage();
+                System.exit(0);
+            }
+            if (arg.startsWith("-")) {
+                if (arg.contains("=")) {
+                    int settingLastIndex = arg.indexOf("=");
+                    String settingName = arg.substring(0, settingLastIndex);
+                    String settingValue = arg.substring(settingLastIndex + 1);
+                    commandLineSettings.put(settingName, settingValue);
+                }
+            }
+        }
 
-        return;
 
-//         Logger.getGlobal().setLevel(Level.OFF);
-//         commandLineSettings = new HashMap<>();
-//         for (String arg : args) {
-//             if (arg.contains(HELP_FLAG)) {
-//                 printUsage();
-//                 System.exit(0);
-//             }
-//             if (arg.startsWith("-")) {
-//                 if (arg.contains("=")) {
-//                     int settingLastIndex = arg.indexOf("=");
-//                     String settingName = arg.substring(0, settingLastIndex);
-//                     String settingValue = arg.substring(settingLastIndex + 1);
-//                     commandLineSettings.put(settingName, settingValue);
-//                 }
-//             }
-//         }
-//
-//
-// //        String version = System.getProperty("java.version");
-// //        if (!(version.startsWith("1.8") || version.startsWith("1.7") || version.startsWith("1.6"))) {
-// //            System.out.println("Warning: The current Java version(" + version + ") is not support,please use Java(8)");
-// //            System.exit(0);
-// //        }
-//
-//
-// //        System.out.println("please input regex ");
-// //        Scanner scanner = new Scanner(System.in);
-// //        String regex = scanner.nextLine();
-// //        System.out.println("input:" + regex);
-// //
-// //        getResult(regex);
-//
-//         //从文件中逐行读取正则表达式
-//         // String filePath = "cve414.txt";
-//         // String filePath = "cve414_short.txt";
-//         // String filePath = "regexlib.txt";
-//         String filePath = "regexlib.txt";
-//         List<String> regexList = new ArrayList<>();
-//         try {
-//             regexList = readFile(filePath);
-//         } catch (Exception e) {
-//             e.printStackTrace();
-//         }
-//         for (int i = 0; i < regexList.size(); i++) {
-//             String regex = regexList.get(i);
-//             int id = i;
-//            if (id != 121) continue;
-//             System.out.println("id: " + id + " regex: " + regex);
-//             getResult(id, regex);
-//         }
+       // try {
+       //     String regexsmt = Translator.INSTANCE.translate("cvc4", "\\n");
+       //     System.out.println(regexsmt);
+       // } catch (FormatNotAvailableException | TranslationException e) {
+       //     throw new RuntimeException(e);
+       // }
+       //
+       //  return;
+
+        getResult(0, "(a*)*.(\\w*)*");
     }
 
 
     public static void getResult(int regexId, String regex) {
         int timeout = Integer.parseInt(commandLineSettings.getOrDefault(TIMEOUT_SETTING, String.valueOf(DEFAULT_TIMEOUT)));
-        String model = commandLineSettings.getOrDefault(ATTACK_MODEL, ATTACK_MODEL_MULTI);
+        // String model = commandLineSettings.getOrDefault(ATTACK_MODEL, ATTACK_MODEL_MULTI);
+        String model = commandLineSettings.getOrDefault(ATTACK_MODEL, ATTACK_MODEL_SINGLE);
         String language = commandLineSettings.getOrDefault(LANGUAGE, DEFAULT_LANGUAGE);
         ArrayList<String> tasksData = new ArrayList<>();
         tasksData.add(regex);
@@ -132,17 +98,16 @@ public class Main {
         validateBeans = threadValidateUtils.execute(multiBaseBean.getData(), null, new ITask<ReDoSBean, ReDoSBean>() {
             @Override
             public ReDoSBean execute(ReDoSBean bean, Map<String, Integer> params) {
-                return (ReDoSMain.validateReDoS(bean, model,"java"));
+                return (ReDoSMain.validateReDoS(bean, model, language));
             }
         });
 
-
-        // 如果output/regexId/文件夹不存在，则创建
+        // 如果output/文件夹不存在，则创建
         String outputDir = "output";
-        if (!Files.exists(Path.of(outputDir))) {
+        if (!Files.exists(Paths.get(outputDir), LinkOption.NOFOLLOW_LINKS)) {
             try {
                 // 创建目录，包括任何必需但不存在的父目录
-                Files.createDirectories(Path.of(outputDir));
+                Files.createDirectories(Paths.get(outputDir));
                 System.out.println("目录已创建: " + outputDir);
             } catch (IOException e) {
                 e.printStackTrace();
@@ -161,50 +126,61 @@ public class Main {
                             int validateId = validateBeans.getData().indexOf(bean);
                             int attackId = i;
 
-                            ArrayList<Pair<String, ArrayList<String>>> allSMTsAndRegexes = new ArrayList<>();
-                            allSMTsAndRegexes.addAll(bean.getAttackBeanList().get(i).getPrefix().getValue().toSmtLib());
-                            allSMTsAndRegexes.addAll(bean.getAttackBeanList().get(i).getInfix().getValue().toSmtLib());
-                            allSMTsAndRegexes.addAll(bean.getAttackBeanList().get(i).getSuffix().getValue().toSmtLib());
+
+                            String smtOfPrefix = bean.getAttackBeanList().get(i).getPrefix().getValue().toSmtLib();
+                            String smtOfInfix = bean.getAttackBeanList().get(i).getInfix().getValue().toSmtLib();
+                            String smtOfSuffix = bean.getAttackBeanList().get(i).getSuffix().getValue().toSmtLib();
 
                             int SMTCount = 0;
 
-                            // ArrayList<Pair<String, ArrayList<String>>> test = new ArrayList<>();
-                            // test.addAll(bean.getAttackBeanList().get(i).getPrefix().getValue().toSmtLib());
-                            // test.addAll(bean.getAttackBeanList().get(i).getInfix().getValue().toSmtLib());
-                            // test.addAll(bean.getAttackBeanList().get(i).getSuffix().getValue().toSmtLib());
+                            String smtlib = "(set-logic QF_SLIA)\n" +
+                                    "(declare-const result String)\n" +
+                                    "(declare-const attack String)\n" +
+                                    "(declare-const prefix RegLan)\n" +
+                                    "(declare-const infix RegLan)\n" +
+                                    "(declare-const postfix RegLan)\n" +
+                                    "(declare-const postfixs String)\n" +
+                                    "\n" +
+                                    "(assert (str.in.re attack (re.++ prefix ((_ re.loop " + bean.getAttackBeanList().get(i).getRepeatTimes() + " " + bean.getAttackBeanList().get(i).getRepeatTimes() + ") infix) postfix)))\n" +
+                                    "(assert (= prefix \n" +
+                                    "    " + ((smtOfPrefix.isEmpty()) ? "(str.to_re \"\")" : smtOfPrefix) + "\n" +
+                                    "))\n" +
+                                    "(assert (= infix \n" +
+                                    "        " + ((smtOfInfix.isEmpty() ? "(str.to_re \"\")" : smtOfInfix)) + "\n" +
+                                    "))\n" +
+                                    "(assert (= postfix \n" +
+                                    "        " + ((smtOfSuffix.isEmpty() ? "(str.to_re \"\")" : smtOfSuffix)) + "\n" +
+                                    "))\n" +
+                                    "(assert (str.in.re postfixs postfix))\n" +
+                                    "(assert (>= (str.len postfixs) 1))\n" +
+                                    "(assert (= result (str.++ attack postfixs)))\n" +
+                                    "(check-sat)\n" +
+                                    "(get-model)";
 
-                            for (Pair<String, ArrayList<String>> pair : allSMTsAndRegexes) {
-                                System.out.println(pair.getKey() + " : " + pair.getValue());
-                                String smtlib = "(set-logic QF_S)\n" +
-                                        "(declare-const x String)\n" +
-                                        "(assert (str.in.re x " + pair.getKey() + "))\n" +
-                                        "(check-sat)\n" +
-                                        "(get-model)";
-                                String regexes = "";
-                                for (int j = 0; j < pair.getValue().size() - 1; j++) {
-                                    regexes += pair.getValue().get(j) + "\n";
-                                }
-                                regexes += pair.getValue().get(pair.getValue().size() - 1);
 
-                                String smtlibFile = outputDir + "/" + regexId + "_" + validateId + "_" + attackId + "_" + SMTCount + ".smt2";
-                                String regexFile = outputDir + "/" + regexId + "_" + validateId + "_" + attackId + "_" + SMTCount + ".txt";
-                                //写入smtlib文件
-                                try {
-                                    Files.write(Path.of(smtlibFile), smtlib.getBytes(StandardCharsets.UTF_8));
-                                    System.out.println("SMTLIB文件已写入: " + smtlibFile);
-                                } catch (IOException e) {
-                                    e.printStackTrace();
-                                }
-                                //写入regex文件
-                                try {
-                                    Files.write(Path.of(regexFile), regexes.getBytes(StandardCharsets.UTF_8));
-                                    System.out.println("Regex文件已写入: " + regexFile);
-                                } catch (IOException e) {
-                                    e.printStackTrace();
-                                }
-
-                                SMTCount += 1;
+                            String smtlibFile = outputDir + "/" + regexId + "_" + validateId + "_" + attackId + "_" + SMTCount + ".smt2";
+                            //写入smtlib文件
+                            try {
+                                Files.write(Paths.get(smtlibFile), smtlib.getBytes(StandardCharsets.UTF_8));
+                                System.out.println("SMTLIB文件已写入: " + smtlibFile);
+                            } catch (IOException e) {
+                                e.printStackTrace();
                             }
+                            // 写入调试信息
+                            try {
+                                Files.write(Paths.get(smtlibFile.replace("smt2","log")),
+                                        Collections.singleton("prefix:\n" + bean.getAttackBeanList().get(i).getPrefix().getValue().toString() + "\n" +
+                                                "infix:\n" + bean.getAttackBeanList().get(i).getInfix().getValue().toString() + "\n" +
+                                                "suffix:\n" + bean.getAttackBeanList().get(i).getSuffix().getValue().toString() + "\n" +
+                                                "repeatTimes:\n" + bean.getAttackBeanList().get(i).getRepeatTimes() + "\n" +
+                                                "attackSuccess:\n" + bean.getAttackBeanList().get(i).isAttackSuccess() + "\n" +
+                                                "attackString:\n" + bean.getAttackBeanList().get(i).getAttackString() + "\n")
+                                        , StandardCharsets.UTF_8);
+                                System.out.println("SMTLIB文件已写入: " + smtlibFile);
+                            } catch (IOException e) {
+                                e.printStackTrace();
+                            }
+
                         } catch (Exception e) {
                             e.printStackTrace();
                         }
